# TurboVulkan

./: .clang-format  .clang-tidy  .clangd  .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TodoAndNotes.md  raddbg  readme.md  vcpkg-configuration.json  vcpkg.json
.zed/: debug.json  tasks.json
Editor/: CMakeLists.txt
Editor/Private/: EditorLayer.cpp  RenderingTestLayer.cpp  main.cpp
Editor/Private/EditorVIewPort/: EditorFreeCamera.cpp
Editor/Private/Windows/: ComponentEditors.cpp  EditorGizmo.cpp  EditorViewportWindow.cpp  PropertyEditor.cpp  SceneOutlinerWindow.cpp
Editor/Public/: EditorLayer.h  RenderingTestLayer.h
Editor/Public/EditorViewPort/: EditorFreeCamera.h
Editor/Public/Windows/: ComponentEditors.h  EditorGizmo.h  EditorViewportWindow.h  PropertyEditor.h  SceneOutlinerWindow.h
Engine/: CMakeLists.txt  pch.h
Engine/Private/: TurboLog.cpp
Engine/Private/AssetLoading/: GLTFMeshLoader.cpp  GLTFMeshLoader.h  MeshLoader.cpp
Engine/Private/Assets/: AssetManager.cpp  EngineMaterials.cpp  EngineResources.cpp  GLTFHelpers.cpp  IOThread.cpp  MaterialManager.cpp  StaticMesh.cpp
Engine/Private/Core/: CoreTimer.cpp  CoreUtils.cpp  Delegate.cpp  Engine.cpp  FileSystem.cpp  Name.cpp  VulkanHelpers.cpp  VulkanRHI.cpp  Window.cpp
Engine/Private/Core/DataStructures/: DestoryQueue.cpp  GenPool.cpp  Pool.cpp  ResourcePool.cpp
Engine/Private/Core/Input/: FSDLInputSystem.cpp  FSDLInputSystem.h  Input.cpp
Engine/Private/Core/Math/: Math.cpp  MathTypes.cpp  Random.cpp  Vector2D.cpp
Engine/Private/Core/RHI/: Buffer.cpp  DeletionQueue.cpp  Device.cpp  FrameData.cpp  HardwareDevice.cpp  Image.cpp  LogicalDevice.cpp  MeshHelpers.cpp  QueueFamilyIndices.cpp  RHICore.cpp  RHIDestoryQueue.cpp  RHIMesh.cpp  ShaderProgram.cpp  SwapChain.cpp  VulkanDevice.cpp  VulkanHardwareDevice.cpp  VulkanRHI.cpp
Engine/Private/Core/RHI/Pipelines/: ComputePipeline.cpp  DescriptorAllocator.cpp  DescriptorLayoutBuilder.cpp  DescriptorWriter.cpp  GraphicsPipelineBase.cpp
Engine/Private/Core/RHI/Utils/: VulkanInitializers.cpp  VulkanUtils.cpp
Engine/Private/Debug/: IConsoleManager.cpp
Engine/Private/Graphics/: CommandBuffer.cpp  Debug.cpp  DestoryQueue.cpp  GPUDevice.cpp  GeometryBuffer.cpp  GraphicsCore.cpp  GraphicsLocator.cpp  ResourceBuilders.cpp  Resources.cpp  ShaderCompiler.cpp  SlangShaderCompiler.cpp  SlangShaderCompiler.h  VulkanHelpers.h  VulkanInitializers.cpp
Engine/Private/Graphics/Debug/: RenderDocFrameDebuggerAPI.cpp  RenderDocFrameDebuggerAPI.h
Engine/Private/Graphics/FrameGraph/: FrameGraph.cpp  FrameGraphHelpers.cpp  RenderGraph.cpp  RenderGraphHelpers.cpp  RenderGraphUtils.cpp
Engine/Private/Layers/: ConsoleFrontendLayer.cpp  Event.cpp  ImGUILayer.cpp  Layer.cpp  SceneRenderingLayer.cpp
Engine/Private/Rendering/Pipelines/: MeshGPPipeline.cpp  TestGPPipeline.cpp
Engine/Private/Services/: ILayer.cpp  IService.cpp  ImGUILayer.cpp  ImGUIService.cpp  RenderingTestService.cpp  SceneRenderingLayer.cpp
Engine/Private/World/: Camera.cpp  CommonEntities.cpp  EntityUtils.cpp  GLTFSceneLoader.cpp  MeshComponent.cpp  SceneGraph.cpp  World.cpp
Engine/Public/: CommonConstants.h  CommonMacros.h  CommonTypeDefs.h  DebugTrap.h  LoggingMacros.h  ProfilingMacros.h  TurboLog.h  pch.h
Engine/Public/AssetLoading/: MeshLoader.h
Engine/Public/Assets/: AssetManager.h  AssetManagerHelpers.h  EngineMaterials.h  EngineResources.h  GLTFHelpers.h  GenericAssetManager.h  IOThread.h  MaterialManager.h  StaticMesh.h
Engine/Public/Core/: CoreTimer.h  CoreUtils.h  Delegate.h  Engine.h  FileSystem.h  Memory.h  Name.h  StandardFormatters.h  VulkanHelpers.h  VulkanRHI.h  Window.h  WindowEvents.h
Engine/Public/Core/Allocators/: StackAllocator.h
Engine/Public/Core/DataStructures/: ArrayHeap.cpp  ArrayHeap.h  DestoryQueue.h  GenPool.h  GenPoolGrowable.h  Handle.h  ManualPoolGrowable.h  Pool.h  ResourcePool.h  StringLookUp.h
Engine/Public/Core/Debug/: IConsoleManager.h
Engine/Public/Core/Input/: Input.h  Keys.h
Engine/Public/Core/Math/: Color.h  FRotator.h  Math.h  MathCommon.h  MathTypes.h  Random.h  Vector.h  Vector2D.h
Engine/Public/Core/RHI/: Buffer.h  DeletionQueue.h  Device.h  FrameData.h  HardwareDevice.h  Image.h  LogicalDevice.h  MeshHelpers.h  QueueFamilyIndices.h  RHICore.h  RHIDestoryQueue.h  RHIMesh.h  RHITypeDefs.h  ShaderProgram.h  SwapChain.h  VulkanDevice.h  VulkanHardwareDevice.h  VulkanRHI.h
Engine/Public/Core/RHI/Pipelines/: ComputePipeline.h  DescriptorAllocator.h  DescriptorLayoutBuilder.h  DescriptorWriter.h  GraphicsPipelineBase.h
Engine/Public/Core/RHI/Utils/: VulkanInitializers.h  VulkanUtils.h
Engine/Public/Core/Utils/: ScopedAction.h  StringUtils.h
Engine/Public/Debug/: IConsoleManager.h
Engine/Public/Extensions/ImGui/: ImGuiExtensions.h
Engine/Public/Graphics/: CommandBuffer.h  Debug.h  DestoryQueue.h  Enums.h  ForwardLightningHelpers.h  GPUDevice.h  GeometryBuffer.h  GraphicsCore.h  GraphicsLocator.h  ResourceBuilders.h  Resources.h  ShaderCompiler.h  VulkanHelpers.h  VulkanInitializers.h
Engine/Public/Graphics/FrameGraph/: FrameGraph.h  FrameGraphHelpers.h  RenderGraph.h  RenderGraphHelpers.h  RenderGraphUtils.h
Engine/Public/Graphics/Shaders/: SceneCullingCS.h  ToneMapperPostProcess.h
Engine/Public/Layers/: ConsoleFrontendLayer.h  Event.h  ImGUILayer.h  Layer.h  SceneRenderingLayer.h
Engine/Public/Rendering/Pipelines/: MeshGPPipeline.h  TestGPPipeline.h
Engine/Public/Services/: ILayer.h  IService.h  ImGUIService.h  RenderingTestService.h  SceneRenderingLayer.h
Engine/Public/UserInterface/: UserInterfaceHelpers.h
Engine/Public/World/: Camera.h  CommonEntities.h  EntityUtils.h  GLTFSceneLoader.h  MeshComponent.h  SceneGraph.h  ShadingComponents.h  World.h
Project/: CMakeLists.txt
Project/Private/: FlyMovement.cpp  RenderingTestLayer.cpp  RenderingTestService.cpp  RuntimeTestLayer.cpp  main.cpp
Project/Private/Rendering/: GameViewportLayer.cpp
Project/Public/: FlyMovement.h  RenderingTestLayer.h  RuntimeTestLayer.h
Project/Public/Rendering/: GameViewportLayer.h
Shaders/: Shader.slang  (+11 more)
(+39 files in other folders)
